--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   },
   "author": "Kartheek",
   "license": "ISC",
-  "engines":{
-    "node":"14.16.1"
+  "engines": {
+    "node": "14.16.1"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "md5": "^2.3.0",
